modify dashboard
